[project]
name = "llm_routers"
version = "0.1.1"
description = "Simple library to do Agent/Model routing, tool routing and gurdrails for LLMs"
readme = "README.md"
requires-python = ">=3.11.11"
dependencies = [
  "transformers"
]


[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
